# modelcheck

./: README.md  pyproject.toml  rules.yaml
.github/workflows/: release.yml
modelcheck/: __init__.py  aibom.py  cli.py  frameworks.yaml  html_report.py  models.py  recommendations.yaml  report.py  rule_config.py
modelcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
modelcheck/evaluators/: adversarial.py  file_security.py  privacy.py  provenance.py
modelcheck/utils/: hf_utils.py  pickle_scanner.py
