[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelcheck"
version = "0.1.0"
description = "Security evaluation tool for ML models (HuggingFace or local)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "huggingface-hub>=0.20",
    "modelaudit>=0.2",
    "requests>=2.28",
]

[project.optional-dependencies]
adversarial = [
    "adversarial-robustness-toolbox[pytorch]>=1.17",
    "torch>=2.0",
    "transformers>=4.35",
    "textattack>=0.3",
]
full = [
    "modelcheck[adversarial]",
    "safetensors>=0.4",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.scripts]
modelcheck = "modelcheck.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelcheck*"]
